# esp32-sandbox

./: .gitmodules  CMakeLists.txt  README.md  main.lua  prepare.sh
main/: CMakeLists.txt  gpio.c  gpio.h  main.c  source.h
scripts/: prepare.lua
